# myslam

./: CMakeLists.txt  collect_data.cpp  elas  readme.md  run.sh  slam.sh  transform.sh
result/: CMakeLists.txt  main.cpp  parameters.txt  parameters_6.txt  pos.txt  pos_6.txt  slamBase.cpp  slamBase.h
src/: main.cpp
